@@ -1,10 +1,13 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.284 2008-05-06 23:56:51 guru Exp $
+	$Id: ChangeLog,v 1.285 2008-05-07 01:47:18 remko Exp $
 -----------------------------------------------------------------------------------------
+2008-05-07	remko
+	* gmt_io.c (GMT_nc_input):	Would not read all columns when no variable names given.
+
 2008-05-06	pwessel
 	* gmtselect.c:		Did not like a variable number of columns.  Now OK if ASCII
 				i/o and at least 2 (3 with -Z) columns are found.
-	* gmt_mgg2_header.c:	Passed 2nd,3rd arguments to fread in the wrong order, thus
+	* gmt_mgg2_header.c:	Passed 2nd, 3rd arguments to fread in the wrong order, thus
 				failed to read GRD98 grids.
 	* gmt_init.c:		Now, media size Custom_WxH can use W and H in inch, cm, or m
 				by appending i, c, or m to each dimension.
